templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: control
  labels:
    app: control
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: control
