templates/travel-control-gw.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: control-gateway
  namespace: travel-control
  labels:
    kiali_wizard: request_routing
spec:
  servers:
    - hosts:
        - travel-control.apps.cluster-8750.sandbox1807.opentlc.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
